--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 blinker==1.9.0
-click==8.1.8
-flask==3.1.0
+click==8.1.8       
+colorama==0.4.6    
+Flask==3.1.0       
 itsdangerous==2.2.0
-jinja2==3.1.5
-MarkupSafe==3.0.2
-werkzeug==3.1.3
+Jinja2==3.1.5      
+MarkupSafe==3.0.2  
+pillow==11.1.0     
+Werkzeug==3.1.3   
+
